syntax = "proto3";

option java_multiple_files = true;
option java_package = "grpc.chat";

message LoginRequest {
    string userName = 1;
    string password = 2;
}

message LoginResponse {
    string status = 1;
    string token = 2;
}

message SendMessageRequest {
    Message message = 1;
    string token = 3;
}

message SendMessageResponse {
    string status = 1;
    string to = 2;
}

message Message {
    string to = 1;
    string from = 2;
    string messageText = 3;
}

message ReceiveMessageRequest {
    string token = 1;
}

service ChatServer {
    // simple unary call
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
    // server streaming call
    rpc ReceiveMessage(ReceiveMessageRequest) returns (stream Message);
    // bidirectional streaming
    rpc chat(stream SendMessageRequest) returns (stream Message);
}